--- a/frontend/src/Contact/Contact.css
+++ b/frontend/src/Contact/Contact.css
@@ -1,6 +1,7 @@
 .contact-section{
     margin-top: 10%;
     margin-left: 5%;
+    margin-right: 5%;;
 }
 /* image and contact list */
 
