--- a/frontend/src/Header/Header.css
+++ b/frontend/src/Header/Header.css
@@ -36,7 +36,7 @@
 
 @media only screen and (max-width: 768px) {
     .header-animation{
-        font-size: 2.8em;
+        font-size: 2.4em;
         margin-top: 15%;
         margin-bottom: 5%;
         display: flex;
