--- a/frontend/src/Projects/Projects.css
+++ b/frontend/src/Projects/Projects.css
@@ -1,3 +1,7 @@
+.project-body{
+    margin-left: 5%;
+    margin-right: 5%;
+}
 .freelance-header{
     margin-top: 10%;
     margin-left: 5%;
